...
          width: Width * 0.8,
          child: Column(
            children: [
              SizedBox(
                height: Height * 0.05,
              ),
              const Text("NEW STUDENT FORM"),
              SizedBox(
                height: Height * 0.05,
              ),
              SmartTextfield(hintText: "Name", controller: name_controller, key: const Key("Name"),),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartDatepicker(
                  hintText: "Date of Birth", controller: birth_controller, key: const Key("Date of Birth"),),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartTextfield(hintText: "E-mail", controller: mail_controller, key: const Key("E-mail"),),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartTextfield(
                  hintText: "Student Contact", controller: contact_controller, key: const Key("Student Contact"),),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartTextfield(
                  hintText: "Guardian Name",
                  controller: guardian_name_controller, key: const Key("Guardian Name"),),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartDropdown(
                  key: const Key("Guardian Relation"),
                  labelText: "Guardian Relation",
                  items: const [
                    "Father",
                    "Husband",
                    "Mother",
                    "Brother",
                    "Sister",
                    "Uncle",
                    "Aunt"
                  ],
                  controller: guardian_relation_controller),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartTextfield(
                  hintText: "Guardian Contact",
                  controller: guardian_contact_controller,
                  key: const Key("Guardian Contact"),),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartTextfield(hintText: "Hobby", controller: hobby_controller, key: const Key("Hobby"),),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartDropdown(
                  labelText: "Nationality",
                  items: const ["Bangladeshi", "Abroad"],
                  controller: nationality_controller,
                  key: const Key("Nationality"),
              ),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartDropdown(
                  labelText: "Gender",
                  items: const ["Male", "Female", "Others"],
                  controller: gender_controller,
                  key: const Key("Gender"),
              ),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartDropdown(
                  labelText: "Religion",
                  items: const ["Islam", "Hinduism", "Buddhism", "Other"],
                  controller: religion_controller,
                  key: const Key("Religion"),
              ),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartDropdown(
                  labelText: "Selected Class",
                  items: const ["one", "three", "six", "nine"],
                  controller: class_controller,
                  key: const Key("Selected Class"),),
              SizedBox(
                height: Height * 0.01,
              ),
              SmartDropdown(
                key: const Key("Favourite Subject"),
                  labelText: "Favourite Subject",
                  items: const [
                    "Physical Test",
                    "Bangladesh Studies",
                    "Literature",
                    "English",
                    "Math",
                    "Information & Tech",
                    "Physics",
...
                  ],
                  controller: fav_sub_controller),
              SizedBox(
                height: Height * 0.05,
              ),
              SmartButton(
                label: "Submit",
                icon: Icons.arrow_downward,
                color: Colors.lightBlue,
                textColor: Colors.white70,
                onPressed: () {

                  formData = [
...
