...
        actions: [
          TextButton(
            child: const Text("Cancel"),
            onPressed: () => context.pop(false),
          ),
          TextButton(
            child: const Text("Yes"),
            onPressed: () => context.pop(true),
          ),
        ],
      ),
    );

...
